# ani-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LEGACY_SHELL_SCRIPT.md  Makefile  README.md  ani-cli  disclaimer.md  hacking.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: ani-cli.yml  release.yml
media/: ani-cli-demo.tape
scripts/: mock-update.sh
src/: api.rs  app.rs  ascii.rs  cli.rs  constants.rs  db.rs  lib.rs  main.rs  player.rs  theme.rs  update.rs
src/discord/: mod.rs
src/domain/: anime.rs  history.rs  jikan.rs  mod.rs  playback.rs
src/persistence/: mod.rs  sqlite_history.rs
src/player/: mod.rs
src/providers/: mod.rs
src/providers/allanime/: config.rs  mod.rs  transport.rs
src/providers/jikan/: mod.rs
src/runtime/: event_loop.rs  mod.rs  msg.rs  terminal.rs
src/runtime/update/: detail.rs  history.rs  home.rs  mod.rs  playing.rs  search.rs
src/services/: anime_catalog.rs  history.rs  jikan_catalog.rs  mod.rs  playback.rs
src/ui/: avatar.rs  chrome.rs  cover_image.rs  detail.rs  genre.rs  help.rs  history.rs  home.rs  layout.rs  mod.rs  playing.rs  recommendations.rs  schedule.rs  search.rs  season.rs  top.rs
src/ui/detail/: metadata_panel.rs  mod.rs
