[package]
name = "ani-cli"
version = "0.1.1"
edition = "2021"
description = "A TUI anime streaming client"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
urlencoding = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
libc = "0.2"
