[package]
name = "ani-cli"
version = "0.2.0"
edition = "2021"
description = "A TUI anime streaming client"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap_complete = "4.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
urlencoding = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
libc = "0.2"
semver = "1"
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "reqwest", "rustls"] }
discord-rich-presence = "1.1"
