[package]
name = "ani-cli"
version = "0.3.2"
edition = "2021"
description = "A TUI anime streaming client"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.52.2", features = ["full"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
clap_complete = "4.6.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = ["bundled"] }
dirs = "6.0.0"
urlencoding = "2.1.3"
regex = "1.12.3"
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
aes = "0.9.0"
ctr = "0.10.0"
sha2 = "0.11.0"
libc = "0.2.186"
semver = "1.0.28"
self_update = { version = "0.44.0", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "reqwest", "rustls"] }
discord-rich-presence = "1.1.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
ratatui-image = { version = "10.0.8", default-features = false, features = ["crossterm"] }
